<resources>
    <string name="app_name">VolApp</string>
    <string name="authorization_text">Вход в личный кабинет</string>
    <string name="hint_1">Введите логин</string>
    <string name="hint_2">Введите пароль</string>
    <string name="authorization_button">Войти</string>
    <string name="registration_button">Зарегистрироваться</string>

    <string name="message_button">Уведомления</string>
    <string name="my_events_button">Мои мероприятия</string>

    <string name="profile">Профиль</string>
    <string name="logout">Выйти</string>
    <string name="wanna_join">Хочу участвовать</string>
    <string name="plus_rep">Похвалить</string>
    <string name="cancel">Я передумал</string>

    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="patronymic">Введите отчество</string>
    <string name="age">Возраст</string>
    <string name="phone">Номер телефона</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="post">Должность:</string>
    <string name="vol">Волонтёр</string>
    <string name="voj">Вожатый</string>
    <string name="divizion">Дивизион</string>

    <string name="events_text">Создайте новое мероприятие</string>
    <string name="data">Дата мероприятия</string>
    <string name="organizer">Организатор</string>
    <string name="place">Место проведения</string>
    <string name="name_events">Название мероприятия</string>
    <string name="direction">Направление мероприятия:</string>

    <string name="fio">Имя и фамилия</string>

    <string name="events_app">Мероприятия</string>
    <string name="new_event_button">Новое мероприятие</string>
    <string name="events_open_text">Доступные мероприятия</string>
    <string name="search_event">Поиск мероприятий</string>
    <string name="new_event">Новое мероприятие</string>

    <string name="new_event_registration">Регистрация мероприятия</string>
    <string name="events_item_text">Название</string>
    <string name="events_item_organizer">Имя организатора</string>
    <string name="events_item_date">Дата мероприятия</string>
    <string name="events_item_place">Место проведения</string>
    <string name="events_item_direction">Направление</string>
    <string name="events_item_button">Подробнее</string>

    <string name="account_app">Личный кабинет</string>
    <string name="register">Регистрация</string>
    <string name="account_name">Имя</string>
    <string name="account_lastname">Фамилия</string>
    <string name="account_post">Должность</string>
    <string name="progress_text">50/200</string>
    <string name="exit_button">Выход из аккаунта</string>

    <string name="close_settings">Закрыть</string>
    <string name="save_settings">Сохранить</string>
    <string name="settings_hint1">Ваше имя</string>
    <string name="settings_hint2">Ваша фамилия</string>
    <string name="settings_hint3">Ваш возраст</string>

    <string name="sport">Спорт</string>
    <string name="patriot">Патриотизм</string>
    <string name="culture">Культурное</string>
    <string name="spirituial">Духовное</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>