<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:cardElevation="10dp">

    <TextView
        android:id="@+id/account_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/register"
        android:textColor="@color/primeColorDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp"
        android:background="@drawable/border_rouded_layount">

        <EditText
            android:id="@+id/login_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/mail"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_rounded_field"
            />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/name"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_rounded_field"/>

        <EditText
            android:id="@+id/lastname_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/lastname"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_rounded_field"/>

        <EditText
            android:id="@+id/age_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/age"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_rounded_field"/>

        <EditText
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_rounded_field"/>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_rounded_field"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/border_rounded_field">

            <TextView
                android:id="@+id/post_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/post_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/post_spinner"
                android:minHeight="48dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>