<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="12dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/my_events_item_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_name_radius"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/events_item_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/my_image_events"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/item_card_background" />

        <TextView
            android:id="@+id/my_events_item_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/events_item_place"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/fio_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/my_events_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/nunito"
                android:text="@string/name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/my_events_item_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/lastname"
                android:textSize="20sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel_application_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_positive_button"
                android:text="@string/cancel"
                android:fontFamily="@font/nunito_sans_bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:backgroundTint="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/frameLayout" />

            <Button
                android:id="@+id/plus_rep_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_positive_button"
                android:text="@string/plus_rep"
                android:fontFamily="@font/nunito_sans_bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:backgroundTint="@color/yellow"
                app:layout_constraintBottom_toBottomOf="@+id/frameLayout" />
        </FrameLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>